--- a/Chapter1_Proteins.qmd
+++ b/Chapter1_Proteins.qmd
@@ -87,10 +87,10 @@ The process of moving from a linear amino acid sequence to a folded protein stru
 
 3.  **2D Contact Map Prediction:** For any protein, you can conceive a matrix representation showing which pairs of residues are likely to be spatially close, providing key insights into the folding topology. In **Chapter 10**, we'll discuss ways in which protein language models (latently!) actually already learn the 2D contact map for each protein, and we'll extract these from the protein model we trained and compare them to the true contact map for a few proteins. because we'll dig into the internals of a language model we'll also have to study **self-attention**, the core "correlational" mechanism in a language model in this chapter.
 
-4.  **3D Structure Construction:** In **Chapter 11**, we'll look at a few different ways in which we can train models that output a full 3D protein by post-processing the 2D information learned in protein language models. We'll conceive of 2D structures as images, and 3D structures as simply 3D representations. Deep-learning models for image data have advanced incredibly, and those lessons have been applied to proteins structure modeling. One highly successful guided image modeling technique is **guided-diffusion,** a model where trough adding noise to images in 1000s of small steps, and then training a model to denoise the image one step at a time people have been able to train "generative" models. These models can be augmented with textual (or other) context, so while denoising a golden retriever with a funny hat, the model is provided the embedding, or reduction of the text "Golden retriever with a funny hat". **Alphafold3**[@abramson2024], one of the most performant models to date, is essentially a protein language model (slightly augmented with MSA information) where the final information form the language model is used to guide a diffusion model. Because **Alphafold3** is a fairly complex model, we'll take a stab at training something slightly more abstracted. We;'ll use our own protein model (or `facebook/esm2_t33_650M_UR50D`) to produce embedding, and by using cross attention between the language model embedding, and the diffusion image model matrices "guide" the construction of 2D contact maps from noise using fairly standard image modeling techniques[@saharia2022]. Finally, we'll have code to do the same for 3D protein structure, though training that model will likely exceed the computational facilities I or either of you can easily access.
+4.  **3D Structure Construction:** In **Chapter 11**, we'll look at a few different ways in which we can train models that output a full 3D protein by post-processing the 2D information learned in protein language models. We'll conceive of 2D structures as images, and 3D structures as simply 3D representations. Deep-learning models for image data have advanced incredibly, and those lessons have been applied to proteins structure modeling. One highly successful guided image modeling technique is **guided-diffusion,** a model where trough adding noise to images in 1000s of small steps, and then training a model to denoise the image one step at a time people have been able to train "generative" models. These models can be augmented with textual (or other) context, so while denoising a golden retriever with a funny hat, the model is provided the embedding, or reduction of the text "Golden retriever with a funny hat". **Alphafold3**[@abramson2024], one of the most performant models to date, is essentially a protein language model (slightly augmented with MSA information) where the final information form the language model is used to guide a diffusion model. Because **Alphafold3** is a fairly complex model, we'll take a stab at training something slightly more abstracted. We;'ll use our own protein model (or `facebook/esm2_t33_650M_UR50D`) to produce embedding, and by using cross attention between the language model embedding, and the diffusion image model matrices "guide" the construction of 2D contact maps from noise using fairly standard image modeling techniques[@saharia2022]. Finally, we'll have code to do the same for 3D protein structure, though training that model will likely exceed the computational facilities I or either of you can easily access. in **Chapter 12** we exand our AF3 like toy model, by conditioning it on both 1D sequence embeddings and 2D attention maps.
 
 ## Weird and wonderfull protein model variants
 
 Ont he back of the succes of Alphfold have come some truely creative models. 
 
- **Amino-acids to structure and then back to tokens**: In **Chapter 12**, we'll discuss an interesting class of models that actually mimic nature in a weird way, these models take molecules as input, and condense those into categorical tokens, not amino-acid, but learned tokens trained to represent a hyper efficient geometric alphabet. Foldseek [@vankempen2023] and models like it[@gao2024a] **take a 3D structure, and encode that into categorical tokens**, at the same resolution of the amino acids. Then at each base we know amino-acid, its location in 3D space, and a new token that compresses that location in space. This technique, the first of which was known as might sound a little redundant but it gets at an important issue: many very different proteins, in terms of structure, might fold in similar ways, and even serve similar or the same biological function! Furthermore having encoded structure into tokens allows for ultra fast structure similarity search (orders of magnitudes faster then search based on the full 3d molecule). One of the exciting applications these models might have is to train GPT like models on these spatial tokens in order to generate candidate proteins which are likely to fold into a specific shape[@gaujac2024].
+ **Amino-acids to structure and then back to tokens**: In **Chapter 13**, we'll discuss an interesting class of models that actually mimic nature in a weird way, these models take molecules as input, and condense those into categorical tokens, not amino-acid, but learned tokens trained to represent a hyper efficient geometric alphabet. Foldseek [@vankempen2023] and models like it[@gao2024a] **take a 3D structure, and encode that into categorical tokens**, at the same resolution of the amino acids. Then at each base we know amino-acid, its location in 3D space, and a new token that compresses that location in space. This technique, the first of which was known as might sound a little redundant but it gets at an important issue: many very different proteins, in terms of structure, might fold in similar ways, and even serve similar or the same biological function! Furthermore having encoded structure into tokens allows for ultra fast structure similarity search (orders of magnitudes faster then search based on the full 3d molecule). One of the exciting applications these models might have is to train GPT like models on these spatial tokens in order to generate candidate proteins which are likely to fold into a specific shape[@gaujac2024].
